# ScratchVision

./: .gitignore  README.md  TIMELINE.md  pyproject.toml  requirements.txt
configs/: alexnet.yaml  lenet.yaml
data/: __init__.py  download_datasets.py
documentation/: 00_why-cnn.md  01_neocognitron-1980.md  02_lenet-5.md  03_alexnet.md
documentation/timelines/: CLASSIFICATION.md  DETECTION.md  RECOGNITION.md  SEGMENTATION.md
experiments/MLP/: mlp_detailed.pth  mlp_weights.pth
experiments/alexnet/: alexnet_detailed.pth  alexnet_weights.pth
experiments/lenet/: lenet_detailed.pth  lenet_weights.pth
notebooks/: 00_MLP.ipynb  02_LeNet-5.ipynb  03_AlexNet.ipynb
scripts/: run_alexnet.py  run_lenet.py  run_mlp.py  run_neocognitron.py
src/: __init__.py
src/components/: __init__.py
src/components/lenet/: C3Layer.py  RBFOutput.py  SquashingFunction.py  __init__.py
src/components/neocognitron/: CLayer.py  SLayer.py  __init__.py  patch_extract.py  patch_to_grid.py
src/configs/: lenet.yaml  neocognitron.yaml
src/evaluators/: __init__.py  evaluate_lenet.py  evaluate_model.py
src/evaluators/eval/: __init__.py  evaluate_alexnet.py  evaluate_lenet.py  evaluate_model.py
src/evaluators/metrics/: RBFLoss.py  __init__.py  accuracy.py  topk_error.py
src/models/: AlexNet.py  LeNet.py  MLP.py  Neocognitron.py  __init__.py
src/trainers/: __init__.py  train_classifier.py  train_epoch.py
src/trainers/alexnet/: __init__.py  train_alexnet.py  train_alexnet_epoch.py
src/trainers/lenet/: __init__.py  train_lenet.py  (+1 more)
src/utils/: __init__.py  adjust_learning_rate.py
(+14 files in other folders)
